<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="?attr/surfaceColor"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvGreetingMessage"
            style="@style/TextViewHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/hello_prabhat"
            tools:ignore="RelativeOverlap" />

        <com.prabhatkushwaha.mychef.framework.presentation.ui.views.CustomStyleablImageView
            android:layout_width="@dimen/width_50dp"
            android:layout_height="@dimen/height_50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            app:srcCompat="@drawable/ic_person_flat" />

        <TextView
            android:id="@+id/tvUserQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGreetingMessage"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/what_you_want_to_cook_today" />


        <EditText
            android:id="@+id/etSearch"
            style="@style/EditTextWithDrawableStyle"
            android:layout_below="@+id/tvUserQuestion"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:background="@drawable/bg_outline_search_view"
            android:drawableStart="@drawable/ic_search"
            android:focusable="false"
            android:hint="@string/search_recipe"
            android:importantForAutofill="no"
            android:inputType="text"
            app:queryHint="Search Recipe" />


        <TextView
            android:id="@+id/tvCategory"
            style="@style/PrimaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etSearch"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/category"
            android:textSize="@dimen/textSize_17sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCategory"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_category" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:background="?attr/surfaceColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlFilter">


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeToRefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/item_recipe" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>